Index templates can now be deleted with the exception of the root/index template. An alert modal is shown when attempting to delete this. This is blocked both client side and server side. Fixed vertical alignment of icon on Media Chooser button.

--- a/thunderchild/static/thunderchild/css_src/templates.less
+++ b/thunderchild/static/thunderchild/css_src/templates.less
@@ -160,6 +160,12 @@
     top:30px;
     bottom:0;
   }
+  #media-chooser-button {
+    i {
+      position:relative;
+      top:-1px;
+    }
+  }
 }
 #preview-template-control {
   .preview-url, input, a {
